 * Added an option for resetting all workspace layouts, including those of all saved worlds, and moved workspace layout menu items to submenu
 * Make sure that resetting the configuration by deleting the config file also resets the acceleration type setting
 * Show a message and undo the operation if a flood fill fails due to the area being too large, instead of crashing with an error
 * Bug fix: make removing Combined Layers work again

-- Version 2.0.1, released 18-9-2015

 * Bug fix: make "reset terrain type to default" operation on Global Operations screen work again
 * Bug fix: make brush filters work correctly again, instead of reflecting tile 0,0 any time the painted area was completely contained in one tile
 * Bug fix: don't crash with NullPointerExceptions while adding custom objects. The cause of the bug is not yet known, but a workaround has been implemented so that the problem is silently logged. It is possible that as a result the 3D preview will remain empty or incomplete. Please let the author know if that happens!
 * Bug fix: don't try to flood fill or let the user enter text if she has not selected a paint yet (which was causing error messages)
 * Bug fix: fix some problems that caused errors when selecting or first using brushes in some circumstances
 * Bug fix: don't cause an additional exception when handling an exception with an empty stack trace

-- Version 2.0.0, released 13-9-2015

 * WorldPainter now requires Java 8! Download Java 8 from Oracle here: http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html
 * The 32-bit version no longer works on 64-bit Windows. If you have 64-bit Windows, make sure to have 64-bit Java installed and to download the 64-bit version of WorldPainter. You can download 64-bit Java here by choosing "Windows x64" (the .exe variant): http://www.oracle.com/technetwork/java/javase/downloads/jre8-downloads-2133155.html