@@ -97,7 +97,7 @@ add.a.custom.object.layer=Add a custom object layer
 add.a.custom.ground.cover.layer=Add a custom ground cover layer
 add.a.custom.underground.pockets.layer=Add a custom underground pockets layer
 terrain=Terrain
-not.set.click.to.set=Not set; click to set
+not.set.click.to.set=not set; click to set
 brush=Brush
 brushes=Brushes
 noise=Noise
